--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
-    "babylonjs": "4.2.1"
+    "babylonjs": "4.2.1",
+    "babylonjs-gui": "4.2.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
