--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
     "babylonjs": "4.2.1",
-    "babylonjs-gui": "4.2.1"
+    "babylonjs-gui": "4.2.1",
+    "axios": "^0.24.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
