--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.24.0",
     "babylonjs": "4.2.1",
     "babylonjs-gui": "4.2.1",
+    "babylonjs-loaders": "^4.2.1",
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
     "vuetify": "^2.4.0"
