--- a/package.json
+++ b/package.json
@@ -8,27 +8,33 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "axios": "^0.24.0",
-    "babylonjs": "4.2.1",
-    "babylonjs-gui": "4.2.1",
-    "babylonjs-loaders": "^4.2.1",
-    "core-js": "^3.6.5",
-    "vue": "^2.6.11",
-    "vuetify": "^2.4.0"
+    "@mdi/font": "^6.6.96",
+    "axios": "^0.26.1",
+    "babylonjs": "5.1.0",
+    "babylonjs-gui": "5.1.0",
+    "babylonjs-loaders": "^5.1.0",
+    "core-js": "^3.21.1",
+    "pinia": "^2.0.13",
+    "roboto-fontface": "*",
+    "vue": "^3.0.0-beta.1",
+    "vuetify": "^3.0.0-alpha.11",
+    "webfontloader": "^1.0.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.12.16",
+    "@babel/eslint-parser": "^7.12.16",
     "@mdi/font": "^6.6.96",
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-eslint": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
-    "babel-eslint": "^10.1.0",
-    "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^6.2.2",
-    "sass": "~1.32.0",
+    "@vue/cli-plugin-babel": "~5.0.4",
+    "@vue/cli-plugin-eslint": "~5.0.4",
+    "@vue/cli-service": "~5.0.4",
+    "@vue/compiler-sfc": "^3.0.0-beta.1",
+    "eslint": "^7.32.0",
+    "eslint-plugin-vue": "^8.0.3",
+    "sass": "^1.38.0",
     "sass-loader": "^10.0.0",
-    "vue-cli-plugin-vuetify": "~2.4.5",
-    "vue-template-compiler": "^2.6.11",
-    "vuetify-loader": "^1.7.0"
+    "vue-cli-plugin-vue-next": "~0.1.4",
+    "vue-cli-plugin-vuetify": "~2.4.8",
+    "vuetify-loader": "^2.0.0-alpha.0"
   },
   "eslintConfig": {
     "root": true,
@@ -36,11 +42,11 @@
       "node": true
     },
     "extends": [
-      "plugin:vue/essential",
+      "plugin:vue/vue3-essential",
       "eslint:recommended"
     ],
     "parserOptions": {
-      "parser": "babel-eslint"
+      "parser": "@babel/eslint-parser"
     },
     "rules": {}
   },
