--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
   "dependencies": {
     "@mdi/font": "^6.6.96",
     "axios": "^0.26.1",
-    "babylonjs": "5.1.0",
-    "babylonjs-gui": "5.1.0",
-    "babylonjs-loaders": "^5.1.0",
+    "babylonjs": "4.2.1",
+    "babylonjs-gui": "4.2.1",
+    "babylonjs-loaders": "4.2.1",
     "core-js": "^3.21.1",
     "pinia": "^2.0.13",
     "roboto-fontface": "*",
@@ -32,7 +32,6 @@
     "eslint-plugin-vue": "^8.0.3",
     "sass": "^1.38.0",
     "sass-loader": "^10.0.0",
-    "vue-cli-plugin-vue-next": "~0.1.4",
     "vue-cli-plugin-vuetify": "~2.4.8",
     "vuetify-loader": "^2.0.0-alpha.0"
   },
