--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "roboto-fontface": "*",
     "vue": "^3.0.0-beta.1",
     "vuetify": "^3.0.0-alpha.11",
-    "webfontloader": "^1.0.0"
+    "webfontloader": "^1.0.0",
+    "webpack": "^5.73.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
@@ -34,7 +35,7 @@
     "sass": "^1.38.0",
     "sass-loader": "^10.0.0",
     "vue-cli-plugin-vuetify": "~2.4.8",
-    "vuetify-loader": "^2.0.0-alpha.0"
+    "vuetify-loader": "^2.0.0-alpha.9"
   },
   "eslintConfig": {
     "root": true,
