--- a/package.json
+++ b/package.json
@@ -9,33 +9,29 @@
     "postbuild": "node ./heroku-build.js"
   },
   "dependencies": {
-    "@mdi/font": "^6.6.96",
     "axios": "^0.26.1",
     "babylonjs": "4.2.1",
-    "babylonjs-gui": "4.2.1",
     "babylonjs-loaders": "4.2.1",
-    "core-js": "^3.21.1",
     "pinia": "^2.0.13",
-    "roboto-fontface": "*",
     "vue": "^3.0.0-beta.1",
     "vuetify": "^3.0.0-alpha.11",
-    "webfontloader": "^1.0.0",
-    "webpack": "^5.73.0"
+    "webfontloader": "^1.0.0"
   },
   "devDependencies": {
+    "webpack": "^5.73.0",
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.12.16",
     "@mdi/font": "^6.6.96",
-    "@vue/cli-plugin-babel": "~5.0.4",
-    "@vue/cli-plugin-eslint": "~5.0.4",
-    "@vue/cli-service": "~5.0.4",
+    "@vue/cli-plugin-babel": "^5.0.4",
+    "@vue/cli-plugin-eslint": "^5.0.4",
+    "@vue/cli-service": "^5.0.4",
     "@vue/compiler-sfc": "^3.0.0-beta.1",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
     "sass": "^1.38.0",
     "sass-loader": "^10.0.0",
-    "vue-cli-plugin-vuetify": "~2.4.8",
-    "vuetify-loader": "^2.0.0-alpha.9"
+    "vue-cli-plugin-vuetify": "^2.4.8",
+    "webpack-plugin-vuetify": "^2.0.0-alpha.11"
   },
   "eslintConfig": {
     "root": true,
