--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
   },
   "dependencies": {
     "axios": "^0.26.1",
-    "babylonjs": "4.2.1",
-    "babylonjs-loaders": "4.2.1",
+    "@babylonjs/core": "^5.15.1",
+    "@babylonjs/loaders": "^5.15.1",
+    "@babylonjs/materials": "^5.15.1",
     "pinia": "^2.0.13",
     "vue": "^3.0.0-beta.1",
     "vuetify": "^3.0.0-alpha.11",
