clean up documentation and unnecessary template files

--- a/backend/nginx.conf
+++ b/backend/nginx.conf
@@ -3,6 +3,7 @@ events {
 }
 
 http {
+    #development proxy server that directs backend requests to the flask app and frontend requests to the webpack dev server
     server {
         listen 80;
 
@@ -17,6 +18,10 @@ http {
         location /static {
             proxy_pass http://192.168.77.50:5000/static;
         }
+        location /swaggerui {
+            proxy_pass http://192.168.77.50:5000/swaggerui;
+        }
+
         location / {
             proxy_pass http://192.168.77.50:8080/;
 
